[package]
name = "wireshark_dissector_rs"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2018"
links = "wireshark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.93"

[lib]
name = "wireshark_dissector_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]      # Creates dynamic lib

