[package]
name = "wireshark_dissector_rs"
version = "0.1.0"
authors = ["Ivor Wanders"]
edition = "2018"
links = "wireshark,glib-2.0"
license = "GPL-2.0-or-later" # Wireshark is GPL, this is clearly a derivative work and links against it.
description = "This crate attempts to provide a safe way for writing wireshark dissectors in Rust."
categories = ["api-bindings"]
keywords = ["wireshark"]

[dependencies]
libc = "0.2.93"

[lib]
name = "wireshark_dissector_rs"
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "dummy"
crate-type = ["cdylib"]  # The actual plugins need to be linked as c libraries.
